# bioportal-term-mcp

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
src/bioportal_term_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
